# Watchdog

./: .gitignore  CMakeLists.txt  Descriptions.md  LICENSE.txt  README  README.md  basename.cmake
include/: exceptions.hpp  flags.hpp  helpers.hpp  storage_policies.hpp  watchdir.hpp  watchdog.hpp  watchdog_common.hpp
src/: main.cpp  playground.cpp
